dataset1235/2025-2/2947369575/users/1936540434/executions/1003782500_2383239197.log
== SUBMISSION (2025-08-27 23:16:32)
-- CODE: 
from math import *

pa = float(input("Distancia observador e primeira árvore:" ))


sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:16:03)
-- CODE: 
from math import *

pa = float(input("Distancia observador e primeira árvore:" ))


sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Distancia observador e primeira árvore:Distancia observador e segunda árvore:Ângulo:9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:14:17)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radianos(ang))
            ^^^^^^^^
NameError: name 'radianos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:44)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:43)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:01)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:53)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
(c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:43)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:14:47)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radians(ang))
c = sqrt(pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    angu = (radians(ang))
            ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:44)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2+sa**2-2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:53)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
(c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:30)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:29)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    c**2 = (pa**2 + sa**2 - 2*pa*sa*cos(angu))
    ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:13:54)
-- CODE: 
pa = float(input("Distancia observador e primeira árvore:" ))
sa = float(input("Distancia observador e segunda árvore:" ))
ang = float(input("Ângulo:" ))
angu = (radianos(ang))
(c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
print (round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 5
    (c**2) = (pa**2+sa**2-2*pa*sa*cos(angu))
     ^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
